@@ -19,20 +19,20 @@
 <table id="tul">
  <thead><tr>
   <td class="tc1">Username [[= sortbut($url, 'username') ]]</td>
-[[ if($p{Authuserlist}) { ]]-
+[[ if($p{Authusermod}) { ]]-
   <td class="tc2">Mail [[= sortbut($url, 'mail') ]]</td>
   <td class="tc3">Rank [[= sortbut($url, 'rank') ]]</td>[[ } ]]-
   <td class="tc4">Registered [[= sortbut($url, 'registered') ]]</td>
   <td class="tc5">VN list</td>
   <td class="tc6">Votes</td>
   <td class="tc7">Changes</td>
-[[ if($p{Authuseredit}) { ]]-
+[[ if($p{Authusermod}) { ]]-
   <td class="tc8">&nbsp;</td>[[ } ]]-
  </tr></thead>
  [[ for (@{$d{users}}) { ]]-
  <tr>
   <td class="tc1"><a href="/u[[= $_->{id} ]]">[[: $_->{username} ]]</a></td>
-[[ if($p{Authuserlist}) { ]]-
+[[ if($p{Authusermod}) { ]]-
   <td class="tc2">[[: $_->{mail} ]]</td>
   <td class="tc3">[[: $VNDB::VNDBopts{ranks}[0][0][$_->{rank}] ]]</td>[[ } ]]-
   <td class="tc4">[[= formatdate('%Y-%m-%d', $_->{registered}, 'wd') ]]</td>
@@ -45,7 +45,7 @@
   <td class="tc7">[[ if($_->{changes}) { ]]
    <a href="/u[[= $_->{id} ]]/hist" title="Recent changes by -[[: $_->{username} ]]">[[= $_->{changes} ]]</a>
    [[ } else { ]]0[[ } ]]</td>
-[[ if($p{Authuseredit}) { ]]-
+[[ if($p{Authusermod}) { ]]-
   <td class="tc8">( <a href="/u[[= $_->{id} ]]/edit">edit</a> )</td>[[ } ]]-
  </tr>
  [[ } ]]-
