@@ -31,11 +31,11 @@ our %VNDBopts = (
   },
   ranks  => [
     [ [ qw| visitor loser user mod admin | ], [] ],
-    {map{$_,1}qw| hist                                                    |}, # 0 - visitor (not logged in)
-    {map{$_,1}qw| hist                                                    |}, # 1 - loser
-    {map{$_,1}qw| hist board edit                                         |}, # 2 - user
-    {map{$_,1}qw| hist board boardmod edit mod lock del                   |}, # 3 - mod
-    {map{$_,1}qw| hist board boardmod edit mod lock del userlist useredit |}, # 4 - admin
+    {map{$_,1}qw| hist                                          |}, # 0 - visitor (not logged in)
+    {map{$_,1}qw| hist                                          |}, # 1 - loser
+    {map{$_,1}qw| hist board edit                               |}, # 2 - user
+    {map{$_,1}qw| hist board boardmod edit mod lock del         |}, # 3 - mod
+    {map{$_,1}qw| hist board boardmod edit mod lock del usermod |}, # 4 - admin
   ],
   postsperpage => 25,
   imgpath => '/www/vndb/static/cv',
